# Study-Agent

./: README.md  dummy.env  pyproject.toml  test_agent.ipynb  test_memory.ipynb  test_runnable.ipynb
Demo/EduGen/: Demo_Snipets.ipynb  Edges.py  Helper_functions.py  Nodes.py  README.md  Settings.py  States.py  Utils.py  all_basecode.json  embeddings.py
Demo/LangGraph-RAG-Demo/: Chatbot_UI.py  Compile_graph.py  Nodes.py  Settings.py  Snipets.ipynb  app.py  embeddings.py  generate_embeddings.py  settings.py  utils.py
LangChain/: test_agent.ipynb  test_chatbot.ipynb  test_memory.ipynb  test_runnable.ipynb
LangGraph/: 0.Basic.ipynb  1.StateGraph.ipynb  2.Node_Concept.ipynb  2.Node_Patterns.ipynb  Basic.ipynb  CallingTool.ipynb  HITL.ipynb  HistoryManage.ipynb  Node_Concept.ipynb  Node_Patterns.ipynb  ParrllelNode.ipynb  Streaming_Stdout.ipynb  SubGraph.ipynb  asnyc_node_test.py  configs.py
Reference/: README.md
